--- a/alexander/week2/third_task/catalogue.html
+++ b/alexander/week2/third_task/catalogue.html
@@ -1,63 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Sunko industries</title>
-    <link rel='icon' href='./images/favicon.jpg' type='image/x-icon'/ >
-    <link rel="stylesheet" href="./css/catalogue.css" /> 
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-  </head>
-  <body>
+    <link rel='icon' href='https://drive.google.com/uc?export=view&id=1nR5Nt5tWhg_wuB6afujKXt2tkV4JiH-f' type='image/x-icon'/>
+    <link rel="stylesheet" href="./css/catalogue.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+</head>
+
+<body>
     <header>
-      <div class="navbar-fixed">
-        <nav>
-          <div class="nav-wrapper black">
-            <a href="home.html" class="brand-logo">S.industries</a>
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"
-              ><i class="material-icons">menu</i></a>
-            <ul class="right hide-on-med-and-down">
-              <li><a href="catalogue.html">Catalogue</a></li>
-              <li><a href="about.html">About us</a></li>
-              <li><a href="contact.html">Contact us</a></li> 
-            </ul>
-          </div>
-        </nav>
-      </div>
-      <ul class="sidenav" id="mobile-demo">
-          <li><a href="catalogue.html">Catalogue</a></li>
-          <li><a href="about.html">About us</a></li>
-          <li><a href="contact.html">Contact us</a></li>
-      </ul>
+        <div class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper black">
+                    <a href="home.html" class="brand-logo">S.industries</a>
+                    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="catalogue.html">Catalogue</a></li>
+                        <li><a href="about.html">About us</a></li>
+                        <li><a href="contact.html">Contact us</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <ul class="sidenav" id="mobile-demo">
+            <li><a href="catalogue.html">Catalogue</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="contact.html">Contact us</a></li>
+        </ul>
     </header>
     <main>
-      <h1>FOR SHOPPING GO TO CONTACT US</h1>
-      <div class="row col s12">
-        <div class="col s12 l6">
-            <div class="card">
-                <div class="card-image">
-                    <img src="./images/ak-sale.jpg" alt="ak47" height="300px">
-                </div>
-                <div class="card-content">
-                    <span class="card-title">
-                        AK47
-                    </span>
-                    <p>MOST COMMONLY USED WEAPON IN THE WORLD! <b class="prices">2500$</b></p>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 l6">
+        <h1>FOR SHOPPING GO TO CONTACT US</h1>
+        <div class="row col s12">
+            <div class="col s12 l6">
                 <div class="card">
                     <div class="card-image">
-                        <img src="./images/rpg-sale.jpg" alt="rpg" height="300px">
+                        <img src="https://drive.google.com/uc?export=view&id=1uSgKFwIz3qo_A1B0P1LpCacnvzRQgIXr" alt="ak47"
+                            height="300px">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title">
+                            AK47
+                        </span>
+                        <p>MOST COMMONLY USED WEAPON IN THE WORLD! <b class="prices">2500$</b></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 l6">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="https://drive.google.com/uc?export=view&id=16Zei7PgoLZmpTRm4EGf0zUQ38NiQvVdN" alt="rpg"
+                            height="300px">
                     </div>
                     <div class="card-content">
                         <span class="card-title">
@@ -68,97 +65,107 @@
                 </div>
             </div>
             <div class="col s12 l6">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="./images/rpk-sale.jpg" alt="rpk" height="300px">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title">
-                                RPK
-                            </span>
-                            <p>VERY FAST RATE OF FIRE WITH LITTLE RECOIL BEST USE STATIONARY! <b class="prices">2700$</b></p>
-                        </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="https://drive.google.com/uc?export=view&id=1Arp_1PXAHt2IoXS8zR7KFiYGtF74d5pK" alt="rpk"
+                            height="300px">
                     </div>
+                    <div class="card-content">
+                        <span class="card-title">
+                            RPK
+                        </span>
+                        <p>VERY FAST RATE OF FIRE WITH LITTLE RECOIL BEST USE STATIONARY! <b class="prices">2700$</b>
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="col s12 l6">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="./images/svd2-sale.jpg" alt="svd" height="300px">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title">
-                                SVD
-                            </span>
-                            <p>SEMI AUTO SNIPER RIFLE GOOD TO 1KM LONG SHOTS! <b class="prices">3500$</b></p>
-                        </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="https://drive.google.com/uc?export=view&id=1od8X5yABiEfT9Fbw2HDtISXuulhwCEZ3" alt="svd"
+                            height="300px">
                     </div>
+                    <div class="card-content">
+                        <span class="card-title">
+                            SVD
+                        </span>
+                        <p>SEMI AUTO SNIPER RIFLE GOOD TO 1KM LONG SHOTS! <b class="prices">3500$</b></p>
+                    </div>
+                </div>
             </div>
             <div class="col s12 l6">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="./images/awp-sale.jpg" alt="awp" height="300px">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title">
-                                AWP
-                            </span>
-                            <p>MAGNUM BOLT SNIPER RIFLE GOOD TO UP 2KM LONGSHOTS! <b class="prices">4000$</b></p>
-                        </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="https://drive.google.com/uc?export=view&id=1ZF8p9JumMI3yl4Pya0_QWjRH4StB4sz-" alt="awp"
+                            height="300px">
                     </div>
+                    <div class="card-content">
+                        <span class="card-title">
+                            AWP
+                        </span>
+                        <p>MAGNUM BOLT SNIPER RIFLE GOOD TO UP 2KM LONGSHOTS! <b class="prices">4000$</b></p>
+                    </div>
+                </div>
             </div>
             <div class="col s12 l6">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="./images/m16-sale.jpg" alt="m16" height="300px">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title">
-                                M16
-                            </span>
-                            <p>HIGHLY ACCURATE ASSAULT RIFLE! <b class="prices">3000$</b></p>
-                        </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="https://drive.google.com/uc?export=view&id=1InkworCJ886oY7TcK43EzoOUKKZUBGhl" alt="m16"
+                            height="300px">
                     </div>
+                    <div class="card-content">
+                        <span class="card-title">
+                            M16
+                        </span>
+                        <p>HIGHLY ACCURATE ASSAULT RIFLE! <b class="prices">3000$</b></p>
+                    </div>
+                </div>
             </div>
             <div class="col s12 l6">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="./images/balaclava-sale.jpg" alt="m16" height="300px">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title">
-                                BALACLAVA
-                            </span>
-                            <p>100% COTTON PRODUCED BY ISIS! <b class="prices">100$</b></p>
-                        </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="https://drive.google.com/uc?export=view&id=1wD6rSQVjc3oksA8TUnXn1t2fEK7-TkWg" alt="m16"
+                            height="300px">
                     </div>
+                    <div class="card-content">
+                        <span class="card-title">
+                            BALACLAVA
+                        </span>
+                        <p>100% COTTON PRODUCED BY ISIS! <b class="prices">100$</b></p>
+                    </div>
+                </div>
             </div>
             <div class="col s12 l6">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="./images/barett-sale.jpg" alt="m16" height="300px">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title">
-                                50 CAL
-                            </span>
-                            <p> BIGGEST CALIBER FOR SNIPER HIGHLY RECOMMENDED FOR EXTREEME DISTANCES! <b class="prices">5000$</b></p>
-                        </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="https://drive.google.com/uc?export=view&id=1Kptw4kCZraNP75uf1GGaiK-u2BxaPQBh" alt="m16"
+                            height="300px">
                     </div>
+                    <div class="card-content">
+                        <span class="card-title">
+                            50 CAL
+                        </span>
+                        <p> BIGGEST CALIBER FOR SNIPER HIGHLY RECOMMENDED FOR EXTREEME DISTANCES! <b
+                                class="prices">5000$</b></p>
+                    </div>
+                </div>
             </div>
-    </div>        
+        </div>
     </main>
     <footer class="page-footer black">
-      <div class="footer-copyright">
-        © 2019 Sunko Industries
-        <div class="right" id="rights">All rights reserved</div>
-      </div>
+        <div class="footer-copyright">
+            © 2019 Sunko Industries
+            <div class="right" id="rights">All rights reserved</div>
+        </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
     <script>
-      $(document).ready(function() {
-        $(".sidenav").sidenav();
-      });
+        document.addEventListener('DOMContentLoaded', () => {
+            const sideNav = document.querySelectorAll('.sidenav');
+            M.Sidenav.init(sideNav, {});
+        });
     </script>
-  </body>
+</body>
+
 </html>
