--- a/kaloyan/week2/about.html
+++ b/kaloyan/week2/about.html
@@ -80,16 +80,14 @@
         </div>
     </div>
 
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!-- Mobile-menu activation script -->
     <script>
-        $(document).ready(function () {
-            $('.sidenav').sidenav();
+        document.addEventListener('DOMContentLoaded', () => {
+            const sideNav = document.querySelectorAll('.sidenav');
+            M.Sidenav.init(sideNav, {});
         });
     </script>
 
