--- a/kaloyan/week2/contact.html
+++ b/kaloyan/week2/contact.html
@@ -108,16 +108,13 @@
             <div class="container center-align">&copy; 2019 k0mata</div>
         </div>
     </div>
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <script>
-        $(document).ready(function () {
-            $('.sidenav').sidenav();
+        document.addEventListener('DOMContentLoaded', () => {
+            const sideNav = document.querySelectorAll('.sidenav');
+            M.Sidenav.init(sideNav, {});
         });
     </script>
 
