--- a/daniel/week1/task1/index.html
+++ b/daniel/week1/task1/index.html
@@ -11,18 +11,18 @@
         <div class = "intro">Dasmoto's Arts & Crafts</div>
   
         <h3 class = "brush">Brushes</h3>
-        <img src = "hacksaw.jpeg"/>
+        <img src = "https://drive.google.com/uc?export=view&id=15OmoeNtuIuYz2KJRPLEIR4Uv-U77p0eH"/>
         <p><strong>Hacksaw Brushes</strong></p>
         <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and the ability to hold paint in large amounts.Avaiable in different sizes.<mark class = "colorized">Starting at $3.00 / brush</mark></p>
 
         <h3 class = "frame">Frames</h3>
-        <img src = "frames.jpeg"/>
+        <img src = "https://drive.google.com/uc?export=view&id=1BMnQkCgFajj40kV-bvtcsCBQNelVwCEj"/>
 
         <p><strong>Art Frames (assorted)</strong></p>
         <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs.<mark class = "colorized">Starting at $2.00 / frame</mark></p>
     
         <h3 class = "paint">Paint</h3>
-        <img src = "finnish.jpeg"/>
+        <img src = "https://drive.google.com/uc?export=view&id=1BMnQkCgFajj40kV-bvtcsCBQNelVwCEj"/>
 
         <p><strong>Clean Finnish Paint</strong></p>
         <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 0z. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <mark class = "colorized">Starting at $5.00 / tube</mark></p>
